--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,10 @@ body {
   @apply bg-green-400 text-slate-700 p-2 h-9 rounded transition ease-in-out  hover:opacity-70;
 }
 
+.forgot-password-background {
+  @apply bg-[url('./assets/forgot-password.png')] bg-cover w-full min-h-screen;
+}
+
 @layer base {
   html {
     font-family: 'Nunito', system-ui, sans-serif;
