feat: wire up basics of the frontend part of the location form

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,35 @@ body {
   @apply bg-[url('./assets/forgot-password.png')] bg-cover w-full min-h-screen;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(15, 23, 42);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+input.PhoneInputInput {
+  background-color: transparent;
+  border: 1px solid rgb(31 41 55);
+  border-radius: 4px;
+  height: 35px;
+}
+
 @layer base {
   html {
     font-family: 'Nunito', system-ui, sans-serif;
