--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,10 @@ body {
   @apply bg-black text-gray-500;
 }
 
+.outline-btn {
+  @apply text-slate-700 p-2 h-9 rounded transition ease-in-out  hover:opacity-70;
+}
+
 .btn {
   @apply bg-green-400 text-slate-700 p-2 h-9 rounded transition ease-in-out  hover:opacity-70;
 }
