feat: display repository reviews for the user to be able to check progress and edit and delete

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,16 @@
   }
 }
 
+.reviews-filter-container {
+  @apply flex flex-row justify-between;
+}
+
+@media (max-width: 1060px) {
+  .reviews-filter-container {
+    @apply flex-col;
+  }
+}
+
 body {
   @apply bg-black text-gray-500;
 }
